--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="app.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
